--- a/.github/workflows/update-data-periodically.yml
+++ b/.github/workflows/update-data-periodically.yml
@@ -1,7 +1,7 @@
 name: Update Data
 on:
-  schedule:
-    - cron: '0 */1 * * *'
+  # schedule:
+  #   - cron: '0 */1 * * *'
   workflow_dispatch:
 
 jobs:
@@ -43,3 +43,4 @@ jobs:
           git add logs data
           git commit -m "Updated Data on `date` with GitHub Actions" || echo "No Changes to Commit"
           git push origin main || echo "No Changes to Commit"
+
